--- a/Homework_11_wpfUI/MainWindow.xaml
+++ b/Homework_11_wpfUI/MainWindow.xaml
@@ -57,7 +57,7 @@
             <Separator Width="10"/>
             <MenuItem Header="Edit" FontSize="12">
                 <MenuItem Header="Create Company 
-                                 ctrl + Q" Click="MenuItem_Click">
+                                 ctrl + Q" Click="CreateCompanyBtn">
                     <MenuItem.Icon>
                         <Image Source="\icon.ico"/>
                     </MenuItem.Icon>
@@ -140,7 +140,7 @@
                             </MenuItem>
                             <MenuItem Header="office          shift + O" Name="openOffice" Click="openOffice_Click"/>
                         </MenuItem>
-                        <MenuItem Header="Close substruct"/>
+                        <MenuItem Header="Close substruct" Click="CloseSubstructBtn"/>
                         <Separator/>
                         <MenuItem Name="hireSubBoss" Header="Hire manager" Click="HireBossInDep"/>
                         <MenuItem Header="Sack manager"/>
@@ -150,15 +150,23 @@
                     </ContextMenu>
                 </ListView.ContextMenu>
             </ListView>
-            <GridSplitter Grid.Column="0" VerticalAlignment="Stretch" Margin="5,0,5,0" Background="#334666" Width="5" >
+            <GridSplitter Grid.Column="0" 
+                          VerticalAlignment="Stretch"
+                          Margin="5,0,5,0"
+                          Background="#334666"
+                          Width="5" >
 
             </GridSplitter>
 
 
-            <Border Grid.Column="2" BorderBrush="#334666" BorderThickness="5,0,0,0">
-                <TextBlock Grid.Column="2" Background="#8590a6" Padding="5" Margin="0,22,0,0" 
-                           Text="{Binding ElementName=structContent, Path=SelectedItem}"
-                           ></TextBlock>
+            <Border Grid.Column="2" 
+                    BorderBrush="#334666" 
+                    BorderThickness="5,0,0,0">
+                <TextBlock Grid.Column="2" 
+                           Background="#8590a6" 
+                           Padding="5" 
+                           Margin="0,22,0,0" 
+                           Text="{Binding ElementName=structContent, Path=SelectedItem}"/>
             </Border>
             <TextBlock 
                 Name="pathStructOrEmploye" 
