--- a/Homework_11_wpfUI/userInterference/SubstructureRename.xaml
+++ b/Homework_11_wpfUI/userInterference/SubstructureRename.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="Homework_11_wpfUI.userInterference.WorkPlaceRename"
+﻿<Window x:Class="Homework_11_wpfUI.userInterference.SubstructureRename"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Homework_11_wpfUI.userInterference"
         mc:Ignorable="d"
-        Title="WorkPlaceRename" Height="200" Width="300"
-        WindowStyle="None" ResizeMode="NoResize">
+        Title="SubstructureRename" Height="200" Width="300"
+        WindowStyle="None" ResizeMode="NoResize"
+        Background="#8590a6"  Foreground="#334666">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
@@ -27,11 +28,13 @@
                     Background="#5c6c85" Foreground="#334666" 
                     Content="Cancel" FontSize="12" FontWeight="Bold" Click="CancelBtn"/>
         </Grid>
-        <TextBlock Grid.Row="0" 
-                   Text="Enter a new substructure name"
+        <TextBlock Grid.Row="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center" 
-                   FontSize="20"/>
+                   FontSize="20">
+            Enter new object name
+            <LineBreak/>and press 'apply' button
+        </TextBlock>
         <Border Background="#5c6c85" 
                 Grid.Row="1" 
                 BorderThickness="2" 
