--- a/Homework_11_wpfUI/MainWindow.xaml
+++ b/Homework_11_wpfUI/MainWindow.xaml
@@ -91,20 +91,26 @@
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="name" Width="70" 
-                                        DisplayMemberBinding="{Binding Name}"/>
+                                        DisplayMemberBinding="{
+                            Binding Name, 
+                            UpdateSourceTrigger=PropertyChanged, 
+                            Mode=TwoWay}"/>
                         <GridViewColumn Header="salary" Width="70" 
-                                        DisplayMemberBinding="{Binding Salary}"/>
+                                        DisplayMemberBinding="{Binding Salary, UpdateSourceTrigger=PropertyChanged, 
+                            Mode=TwoWay}"/>
                         <GridViewColumn Header="type" Width="70" 
-                                        DisplayMemberBinding="{Binding Type}"/>
+                                        DisplayMemberBinding="{Binding Type, UpdateSourceTrigger=PropertyChanged, 
+                            Mode=TwoWay}"/>
                         <GridViewColumn Header="age" Width="70" 
-                                        DisplayMemberBinding="{Binding Age}"/>
+                                        DisplayMemberBinding="{Binding Age, UpdateSourceTrigger=PropertyChanged, 
+                            Mode=TwoWay}"/>
                     </GridView>
                 </ListView.View>
                 <ListView.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Sack" Click="SackEmployeBtn"/>
                         <MenuItem Name="renameEmploye" Header="Rename" Click="renameEmploye_Click" />
-                        <MenuItem Header="Set salary"/>
+                        <MenuItem Header="Set salary" Name="SetSalary" Click="SetSalary_Click"/>
                     </ContextMenu>
                 </ListView.ContextMenu>
             </ListView>
@@ -129,13 +135,15 @@
                             UpdateSourceTrigger=PropertyChanged, 
                             Mode=TwoWay}"/>
                         <GridViewColumn Header="boss" Width="70"
-                                        DisplayMemberBinding="{Binding Boss}"/>
+                                        DisplayMemberBinding="{Binding Boss, UpdateSourceTrigger=PropertyChanged, 
+                            Mode=TwoWay}"/>
                         <GridViewColumn Header="boss salary" Width="80"
-                                        DisplayMemberBinding="{Binding BossSalary}"/>
+                                        DisplayMemberBinding="{Binding BossSalary, UpdateSourceTrigger=PropertyChanged, 
+                            Mode=TwoWay}"/>
                         <GridViewColumn Header="substructs" Width="70" 
-                                        DisplayMemberBinding="{Binding WorkPlaces.Count}"/>
+                                        DisplayMemberBinding="{Binding WorkPlaces.Count, UpdateSourceTrigger=PropertyChanged}"/>
                         <GridViewColumn Header="workers" Width="60" 
-                                        DisplayMemberBinding="{Binding Workers.Count}"/>
+                                        DisplayMemberBinding="{Binding Workers.Count, UpdateSourceTrigger=PropertyChanged}"/>
                     </GridView>
                 </ListView.View>
                 <ListView.ContextMenu>
@@ -155,7 +163,7 @@
                         <Separator/>
                         <MenuItem Name="hireSubBoss" 
                                   Header="Hire manager" Click="HireBossInDep"/>
-                        <MenuItem Header="Sack manager"/>
+                        <MenuItem Header="Sack manager" Name="sackBoss" Click="sackBoss_Click"/>
                         <Separator/>
                         <MenuItem Header="Hire new worker     ctrl + H" 
                                   Name="hireWorker" Click="hireWorker_Click"/>
@@ -163,6 +171,7 @@
                                   Name="hireIntern" Click="HireIntern_Click"/>
                         <Separator/>
                         <MenuItem Header="Rename substructure" Click="MenuItem_Click"/>
+                        <MenuItem Header="Rename boss" Name="RenameBoss" Click="RenameBoss_Click"/>
                     </ContextMenu>
                 </ListView.ContextMenu>
             </ListView>
