--- a/Homework_11_wpfUI/userInterference/SubstructureRename.xaml
+++ b/Homework_11_wpfUI/userInterference/SubstructureRename.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="SubstructureRename" Height="200" Width="300"
         WindowStyle="None" ResizeMode="NoResize"
-        Background="#8590a6"  Foreground="#334666">
+        Background="#8590a6"  Foreground="#334666"
+        KeyDown="OnKeyDown">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
