--- a/Homework_11_wpfUI/MainWindow.xaml
+++ b/Homework_11_wpfUI/MainWindow.xaml
@@ -166,6 +166,9 @@
                         <MenuItem Header="Set salary" 
                                   Name="SetSalary" 
                                   Click="SetSalary_Click"/>
+                        <MenuItem Header="Set age" 
+                                  Name="SetAge" 
+                                  Click="SetAge_Click"/>
                     </ContextMenu>
                 </ListView.ContextMenu>
             </ListView>
