--- a/Homework_11_wpfUI/MainWindow.xaml
+++ b/Homework_11_wpfUI/MainWindow.xaml
@@ -89,6 +89,8 @@
                 <MenuItem Header="Automatic filling         shift + A" 
                           Click="AutoFillingCompanyStructBtn"/>
             </MenuItem>
+            <Separator Width="50" Background="Beige"/>
+            <MenuItem Header="Create with Wizard" Click="openCreationWizard"/>
             <Separator Width="50" Background="#334666" />
             <MenuItem Header="Go Company-tree root..." 
                       Click="GoCompanyRootBtn" FontSize="10"/>
@@ -180,7 +182,7 @@
                 MinWidth="150" 
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
-                Name="structContent"
+                x:Name="structContent"
                 KeyDown="OnListKeyDown"
                 MouseDoubleClick="structContent_MouseDown" 
                 SelectionChanged="structContent_SelectionChanged"
