--- a/Homework_11_wpfUI/masterForms/MasterOfManagerCreation.xaml
+++ b/Homework_11_wpfUI/masterForms/MasterOfManagerCreation.xaml
@@ -123,7 +123,7 @@
         </Border>
         <Border 
             x:Name="wizardBody"
-            Visibility="Hidden"
+            Visibility="Visible"
             Grid.Column="1" 
             Background="#aeb5c5"
             Margin="3,5,3,5"
@@ -272,6 +272,135 @@
                         Cancel
                     </Button>
                 </StackPanel>
+            </Grid>
+        </Border>
+        <Border 
+            x:Name="wizardForSubstructBody"
+            Visibility="Visible"
+            Grid.Column="1" 
+            Background="#aeb5c5"
+            Margin="3,5,3,5"
+            CornerRadius="20"
+            BorderBrush="#334666"
+            BorderThickness="5">
+            <Grid Margin="15,0,15,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="40*"/>
+                    <RowDefinition Height="7*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <StackPanel 
+                    Orientation="Horizontal" 
+                    HorizontalAlignment="Right"
+                    Grid.Row="2">
+                    <Button 
+                        Name="createBtn2"
+                        HorizontalAlignment="Right" 
+                        Width="100" 
+                        VerticalAlignment="Stretch" 
+                        Margin="3,9,3,9"
+                        Click="createBtn_Click">
+                        Create
+                    </Button>
+                    <Button 
+                        Width="100"
+                        HorizontalAlignment="Right" 
+                        Margin="3,9,12,9" 
+                        x:Name="cancelBtn2" 
+                        Click="cancelBtn_Click">
+                        Cancel
+                    </Button>
+                </StackPanel>
+                <Grid Grid.Row="1" Name="structWizard">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="7*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="7*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0" Margin="5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="6*"/>
+                            <RowDefinition Height="4*"/>
+                            <RowDefinition Height="3*"/>
+                            <RowDefinition Height="4*"/>
+                            <RowDefinition Height="3*"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Grid.Row="0" Foreground="#334666" 
+                                   FontSize="15" VerticalAlignment="Bottom" 
+                                   Margin="0,0,0,10">Enter new struct`s name:</TextBlock>
+                        
+                        <TextBlock Grid.Row="1" HorizontalAlignment="Left" 
+                                   Foreground="#334666" FontWeight="Bold" 
+                                   VerticalAlignment="Bottom" Margin="0,0,0,5">
+                            value of workers to<LineBreak/> auto-hire in new struct</TextBlock>
+                        
+                        <TextBox Name="workersCountInput" Grid.Row="2" Width="60" 
+                                 HorizontalAlignment="Left"/>
+                        
+                        <TextBlock Grid.Row="2" HorizontalAlignment="Right" 
+                                   FontStyle="Italic" Foreground="#334666" 
+                                   Margin="0,0,20,0">
+                            or left it empty<LineBreak/> to skip it
+                        </TextBlock>
+                        <TextBlock Grid.Row="3" HorizontalAlignment="Left" 
+                                   Foreground="#334666" FontWeight="Bold" 
+                                   VerticalAlignment="Bottom" Margin="0,0,0,5">
+                            value of interns to<LineBreak/> auto-hire in new struct</TextBlock>
+                        <TextBox Name="internsCountInput" Grid.Row="4" 
+                                 Width="60" HorizontalAlignment="Left"/>
+                        <TextBlock Grid.Row="4" HorizontalAlignment="Right" 
+                                   FontStyle="Italic" Foreground="#334666" 
+                                   Margin="0,0,20,0">
+                            or left it empty<LineBreak/> to skip it
+                        </TextBlock>
+                    </Grid>
+                    <Grid Grid.Column="2" Margin="5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="6*"/>
+                            <RowDefinition Height="4*"/>
+                            <RowDefinition Height="3*"/>
+                            <RowDefinition Height="7*"/>
+                        </Grid.RowDefinitions>
+                        <TextBox Grid.Row="0" Name="newStructsName"
+                                 Height="30" VerticalAlignment="Bottom" 
+                                 Margin="0,0,0,5"></TextBox>
+                        <TextBlock Grid.Row="1" HorizontalAlignment="Left" 
+                                   Foreground="#334666" FontWeight="Bold" 
+                                   VerticalAlignment="Bottom" Margin="0,0,0,5">
+                            value of offices to<LineBreak/> auto-open in new struct</TextBlock> 
+                        <TextBox Name="officesCountInput" Grid.Row="2"
+                                 Width="60" HorizontalAlignment="Left"/>
+                        <TextBlock Grid.Row="2" HorizontalAlignment="Right"
+                                   FontStyle="Italic" Foreground="#334666"
+                                   Margin="0,0,20,0">
+                            or left it empty<LineBreak/> to skip it
+                        </TextBlock>
+                        <Grid Grid.Row="3" 
+                              Name="gridForCreatingDepartments" 
+                              Visibility="Visible">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="4*"/>
+                                <RowDefinition Height="3*"/>
+                            </Grid.RowDefinitions>
+                            <TextBlock 
+                                Grid.Row="0"
+                                HorizontalAlignment="Left" 
+                                Foreground="#334666" 
+                                FontWeight="Bold" 
+                                VerticalAlignment="Bottom" Margin="0,0,0,5">
+                            value of departments to<LineBreak/> auto-open in new struct</TextBlock>
+                            <TextBox Name="departmentsCountInput" Grid.Row="2" 
+                                     Width="60" HorizontalAlignment="Left"/>
+                            <TextBlock Grid.Row="1" HorizontalAlignment="Right"
+                                       FontStyle="Italic" Foreground="#334666"
+                                       Margin="0,0,20,0">
+                            or left it empty<LineBreak/> to skip it
+                            </TextBlock>
+                        </Grid>
+                    </Grid>
+                </Grid>
             </Grid>
         </Border>
     </Grid>
