--- a/Homework_13_bank_system/App.xaml
+++ b/Homework_13_bank_system/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Homework_13.App"
+﻿<Application x:Class="Homework_13_bank_system.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Homework_13"
+             xmlns:local="clr-namespace:Homework_13_bank_system"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
