--- a/Homework_13_bank_system/MainWindow.xaml
+++ b/Homework_13_bank_system/MainWindow.xaml
@@ -5,8 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Homework_13_bank_system"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="MainWindow" Height="450" Width="800" Background="Transparent" WindowStyle="None" ResizeMode="CanResizeWithGrip" AllowsTransparency="True">
+    <Border Background="LightGray" CornerRadius="10" x:Name="mainWindowBorder">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="10"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="2" 
+                        Name="minBtn" 
+                        Click="minBtn_Click" 
+                        ToolTip="Minimize" 
+                        Margin="2" 
+                        Background="Transparent" 
+                        BorderThickness="0">
+                    <Image Source="\minBtn.png"/>
+                </Button>
+                <Button Grid.Column="3" 
+                        Name="maxBtn" 
+                        Click="maxBtn_Click" 
+                        ToolTip="Maximize" 
+                        Margin="2"
+                        Background="Transparent" 
+                        BorderThickness="0">
+                    <Image Source="\maxBtn.png"/>
+                </Button>
+                <Button Grid.Column="4" 
+                        Name="closeBtn" 
+                        Click="closeBtn_Click" 
+                        ToolTip="Exit" Margin="2" 
+                        Background="Transparent"
+                        BorderThickness="0">
+                    <Image Source="\closeBtn.png"/>
+                </Button>
+            </Grid>
+        </Grid>
+    </Border>
 </Window>
